[package]
name = "rmob"
version = "0.1.0"
authors = ["Florian Peter <florian@tenx.tech>", "Eyal Kalderon <eyal.kalderon@tenx.tech"]
edition = "2018"
description = "Arr! Git mobbing in Rust"

[dependencies]
assert_cmd = "0.11.0"
dirs = "1.0.5"
git2 = "0.8.0"
serde = "1.0.89"
serde_json = "1.0.39"
structopt = "0.2.15"
tempfile = "3.0.7"
